# backend/src/models/interfaces/activity/CreateActivityRequest.ts
@@ -1,0 +1,7 @@
+export interface CreateActivityRequest {
+    description: string;
+    category_id: string;
+    dt_inicial: string;
+    dt_final: string;
+    user_id: string;
+}
