# backend/src/models/interfaces/activity/DeleteActivityRequest.ts
@@ -1,0 +1,3 @@
+export interface DeleteActivityRequest {
+    activity_id: string;
+}
