# backend/src/models/interfaces/activity/EditActivityRequest.ts
@@ -1,0 +1,7 @@
+export interface EditActivityRequest {
+    activity_id: string;
+    description: string;
+    category_id: string;
+    dt_inicial: string;
+    dt_final: string;
+}
